--- a/_data/toolkits.yml
+++ b/_data/toolkits.yml
@@ -32,7 +32,7 @@ digital_talent_management:
       url: /work/toolkits/digital-talent-management/building-a-movement-and-a-presence/
     - title: How we wrote this guide
       url: /work/toolkits/digital-talent-management/how-we-wrote-this-guide/
-    - title: "Appendix A: Interview questions for UX Designers"
+    - title: Appendix A&#58; Interview questions for UX Designers
       url: /work/toolkits/digital-talent-management/appendix-a-interview-questions-for-ux-designers/
 
 data_sharing_playbook:
