--- a/_data/toolkits.yml
+++ b/_data/toolkits.yml
@@ -123,17 +123,17 @@ agile_procurement_playbook:
       url: /work/toolkits/agile-procurement-playbook/phases-of-an-agile-procurement/
     - title: Managing an agile project
       url: /work/toolkits/agile-procurement-playbook/managing-an-agile-project/
-    - title: Appendix A&#58; MPSM case study
-      url: /work/toolkits/agile-procurement-playbook/appendix-a-mpsm-case-study/
-    - title: Appendix B&#58; Short intro to agile
-      url: /work/toolkits/agile-procurement-playbook/appendix-b-short-introduction-to-agile-software-development/
-    - title: Appendix C&#58; List of templates
-      url: /work/toolkits/agile-procurement-playbook/appendix-c-list-of-templates/
-    - title: Appendix D&#58; Examples of TEP rating systems
-      url: /work/toolkits/agile-procurement-playbook/appendix-d-examples-of-tep-rating-systems/
-    - title: Appendix E&#58; Example design challenges
-      url: /work/toolkits/agile-procurement-playbook/appendix-e-example-design-challenges/
-    - title: Appendix F&#58; Sample analysis of procurement options
-      url: /work/toolkits/agile-procurement-playbook/appendix-f-sample-analysis-of-procurement-options/
-    - title: Appendix G&#58; Sample Statement of Objectives
-      url: /work/toolkits/agile-procurement-playbook/appendix-g-sample-statement-of-objectives/
+    - title: Appendix A&#58; Case studies
+      url: /work/toolkits/agile-procurement-playbook/appendix-a-case-studies/
+    - title: Appendix B&#58; Key concepts
+      url: /work/toolkits/agile-procurement-playbook/appendix-b-key-concepts/
+    - title: Appendix C&#58; Templates
+      url: /work/toolkits/agile-procurement-playbook/appendix-c-templates/
+    - title: Appendix D&#58; TEP rating system examples
+      url: /work/toolkits/agile-procurement-playbook/appendix-d-tep-rating-system-examples/
+    - title: Appendix E&#58; Design challenge examples
+      url: /work/toolkits/agile-procurement-playbook/appendix-e-design-challenge-examples/
+    - title: Appendix F&#58; Analysis of procurement options examples
+      url: /work/toolkits/agile-procurement-playbook/appendix-f-procurement-options-analysis-examples/
+    - title: Appendix G&#58; Statement of Objectives examples
+      url: /work/toolkits/agile-procurement-playbook/appendix-g-statement-of-objectives-examples/
