--- a/_data/toolkits.yml
+++ b/_data/toolkits.yml
@@ -32,8 +32,8 @@ digital_talent_management:
       url: /work/toolkits/digital-talent-management/building-a-movement-and-a-presence/
     - title: How we wrote this guide
       url: /work/toolkits/digital-talent-management/how-we-wrote-this-guide/
-    - title: Appendix A&#58; Interview questions examples
-      url: /work/toolkits/digital-talent-management/appendix-a-interview-questions-examples/
+    - title: Appendix A&#58; Sample interview questions
+      url: /work/toolkits/digital-talent-management/appendix-a-sample-interview-questions/
 
 data_sharing_playbook:
   title: Data Sharing Playbook
