--- a/_data/toolkits.yml
+++ b/_data/toolkits.yml
@@ -133,7 +133,7 @@ agile_procurement_playbook:
       url: /work/toolkits/agile-procurement-playbook/appendix-d-tep-rating-system-examples/
     - title: Appendix E&#58; Design challenge examples
       url: /work/toolkits/agile-procurement-playbook/appendix-e-design-challenge-examples/
-    - title: Appendix F&#58; Analysis of procurement options examples
+    - title: Appendix F&#58; Procurement options analysis examples
       url: /work/toolkits/agile-procurement-playbook/appendix-f-procurement-options-analysis-examples/
     - title: Appendix G&#58; Statement of Objectives examples
       url: /work/toolkits/agile-procurement-playbook/appendix-g-statement-of-objectives-examples/
