--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "skylight.digital",
   "version": "1.0.0",
   "description": "Skylight's flagship website",
+  "dependencies": {
+    "kind-of": ">=6.0.3"
+  },
   "devDependencies": {
     "cryptiles": ">=4.1.2",
-    "eslint": "^6.0.1",
+    "eslint": "^7.0.0",
     "eslint-utils": ">=1.4.1",
     "extend": ">=3.0.2",
-    "grunt": "^1.0.4",
+    "grunt": "^1.1.0",
     "grunt-accessibility": "^6.0.0",
-    "grunt-cli": "^1.3.2"
+    "grunt-cli": "^1.3.2",
+    "kind-of": ">=6.0.3",
+    "minimist": ">=0.2.1"
   },
   "engines": {
     "node": ">=7.10.0"
