--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Skylight - Digital Government Consulting
 email: hello@skylight.digital
 description: Skylight is a HUBZone digital consultancy driven by making government work in a digital world.
-keywords: digital consulting, digital government, digital transformation, and digital services
+keywords: digital consulting, digital government, digital transformation, digital services
 published: 2017-06-18
 modified: 2017-06-18
 notice_bar: false
