--- a/_config.yml
+++ b/_config.yml
@@ -105,14 +105,17 @@ plugins:
 gems:
   - octopress-debugger
 
-imagemagick:
-  enabled: true
-  widths:
-    - 0
-  input_directories:
-    - img/blog/
-  input_formats:
-    - ".svg"
-  output_formats:
-    png: "-quality 100% -density 600 -background white  -flatten -verbose -fill 'rgba(255,0,0,0)'"
+################################
+# For batch conversion of svgs
+################################
+# imagemagick:
+#   enabled: true
+#   widths:
+#     - 0
+#   input_directories:
+#     - img/blog/
+#   input_formats:
+#     - ".svg"
+#   output_formats:
+#     png: "-quality 100% -density 600 -background white  -flatten -verbose -fill 'rgba(255,0,0,0)'"
 
