--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -1,5 +1,5 @@
 # Sample element:
-# - title: Experienced DevOps Engineer
+# - title: DevOps Engineer
 #   url: https://skylight.workable.com/jobs/604049
 #   location: Washington DC
 #   summary: Save lives
